src/objects/SSOCountryCodes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SFDC_Code__c</fullName>
        <label>SFDC Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSO_Code__c</fullName>
        <label>SSO Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Country_Name__c</fullName>
        <label>Universal Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SSO Country Codes</label>
</CustomObject>